<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">BassieMusic</string>

    <!-- Main activity -->
    <string name="main_access_title_label">No access</string>
    <string name="main_access_description_label">BassieMusic needs access to your music files on your device, without this access the app can\'t load your music</string>
    <string name="main_access_hero_button">Ask again</string>

    <string name="main_empty_title_label">No music</string>
    <string name="main_empty_description_label">BassieMusic can\'t find any music files on your device, maybe you need to transfer some music from your computer to your device</string>
    <string name="main_empty_hero_button">Refresh music</string>

    <!-- Search activity -->
    <string name="search_input_hint">Search</string>

    <string name="search_start_title_label">Start searching...</string>
    <string name="search_start_description_label">Type your search query and BassieMusic will try to find the right song...</string>

    <string name="search_empty_title_label">No search results</string>
    <string name="search_empty_description_label">BassieMusic can\'t find any music files with that search query</string>
    <string name="search_empty_hero_button">Clear search</string>

    <!-- Settings activity -->
    <string name="settings_title_label">Settings</string>

    <string name="settings_behaviour_label">Behaviour</string>
    <string name="settings_remember_music_button">Remember last song</string>
    <string name="settings_fast_scroll_button">Enable fast scroll</string>

    <string name="settings_display_label">Display</string>

    <string name="settings_language_button">Language</string>
    <string name="settings_language_alert_title_label">Language</string>
    <string name="settings_language_alert_cancel_button">Cancel</string>

    <string name="settings_theme_button">Theme</string>
    <string name="settings_theme_alert_title_label">Theme</string>
    <string name="settings_theme_alert_cancel_button">Cancel</string>

    <string name="settings_information_label">Information</string>
    <string name="settings_version_button">App version</string>
    <string name="settings_version_message">Who, you are an amazing hacker!</string>
    <string name="settings_rate_button">Rate this app</string>
    <string name="settings_share_button">Share this app</string>
    <string name="settings_share_message">Check out this cool Android music app:</string>
    <string name="settings_about_button">About this app</string>
    <string name="settings_footer_button">This application is made by Bastiaan van der Plaat\nWith album covers from the nice and open Deezer API</string>

    <string name="settings_about_alert_title_label">About this app</string>
    <string name="settings_about_alert_message_label">This application is made by Bastiaan van der Plaat\n\nWith album covers from the nice and open Deezer API</string>
    <string name="settings_about_alert_website_button">Website</string>
    <string name="settings_about_alert_ok_button">OK</string>

    <string-array name="settings_languages">
        <item>English</item>
        <item>Nederlands</item>
        <item>Use system default</item>
    </string-array>

    <string-array name="settings_themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Set by Battery Saver</item>
    </string-array>

    <!-- Rating alert -->
    <string name="rating_alert_title_label">Rate BassieMusic?</string>
    <string name="rating_alert_message_label">If you like the BassieMusic app, please take a moment to rate it. Thanks for your support!</string>
    <string name="rating_alert_rate_button">Rate</string>
    <string name="rating_alert_later_button">Later</string>
    <string name="rating_alert_never_button">Never</string>
</resources>
