<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Root">

    <!-- Music page -->
    <LinearLayout android:id="@+id/main_music_page"
        style="@style/Root">

        <LinearLayout style="@style/ActionBar">
            <TextView android:text="@string/app_name"
                style="@style/ActionBarTitle" />

            <ImageButton android:id="@+id/main_music_shuffle_button"
                android:src="@drawable/ic_shuffle"
                style="@style/ActionBarIconButton" />

            <ImageButton android:id="@+id/main_music_refresh_button"
                android:src="@drawable/ic_refresh"
                style="@style/ActionBarIconButton" />

            <ImageButton android:id="@+id/main_music_search_button"
                android:src="@drawable/ic_magnify"
                style="@style/ActionBarIconButton" />

            <ImageButton android:id="@+id/main_music_settings_button"
                android:src="@drawable/ic_settings"
                style="@style/ActionBarIconButton" />
        </LinearLayout>

        <ListView android:id="@+id/main_music_list"
            android:fastScrollEnabled="true"
            style="@style/MusicListContainer" />

        <LinearLayout style="@style/MusicPlayer">
            <LinearLayout android:id="@+id/main_music_info_button"
                style="@style/MusicPlayerInfo">

                <TextSwitcher android:id="@+id/main_music_title_label"
                    style="@style/MusicPlayerTitle">

                    <TextView style="@style/MusicPlayerTitleText" />
                    <TextView style="@style/MusicPlayerTitleText" />
                </TextSwitcher>

                <TextSwitcher android:id="@+id/main_music_duration_label"
                    style="@style/MusicPlayerDuration">

                    <TextView style="@style/MusicPlayerDurationText" />
                    <TextView style="@style/MusicPlayerDurationText" />
                </TextSwitcher>
            </LinearLayout>

            <LinearLayout style="@style/MusicPlayerControls">
                <TextSwitcher android:id="@+id/main_music_time_current_label"
                    style="@style/MusicPlayerTimeLabel">

                    <TextView style="@style/MusicPlayerLeftTimeLabelText" />
                    <TextView style="@style/MusicPlayerLeftTimeLabelText" />
                </TextSwitcher>

                <ImageButton android:id="@+id/main_music_previous_button"
                    android:src="@drawable/ic_skip_previous"
                    style="@style/MusicPlayerIconButton" />

                <ImageButton android:id="@+id/main_music_seek_back_button"
                    android:src="@drawable/ic_fast_rewind"
                    style="@style/MusicPlayerIconButton" />

                <ImageButton android:id="@+id/main_music_play_button"
                    android:src="@drawable/ic_pause"
                    style="@style/MusicPlayerIconButton" />

                <ImageButton android:id="@+id/main_music_seek_forward_button"
                    android:src="@drawable/ic_fast_forward"
                    style="@style/MusicPlayerIconButton" />

                <ImageButton android:id="@+id/main_music_next_button"
                    android:src="@drawable/ic_skip_next"
                    style="@style/MusicPlayerIconButton" />

                <TextSwitcher android:id="@+id/main_music_time_until_label"
                    style="@style/MusicPlayerTimeLabel">

                    <TextView style="@style/MusicPlayerRightTimeLabelText" />
                    <TextView style="@style/MusicPlayerRightTimeLabelText" />
                </TextSwitcher>
            </LinearLayout>

            <SeekBar android:id="@+id/main_music_seekbar"
                style="@style/MusicPlayerSeekbar" />
        </LinearLayout>
    </LinearLayout>

    <!-- Empty page -->
    <LinearLayout android:id="@+id/main_empty_page"
        android:visibility="gone"
        style="@style/Root">

        <LinearLayout style="@style/ActionBar">
            <TextView android:text="@string/app_name"
                style="@style/ActionBarTitle" />

            <ImageButton android:id="@+id/main_empty_refresh_button"
                android:src="@drawable/ic_refresh"
                style="@style/ActionBarIconButton" />
        </LinearLayout>

        <ScrollView style="@style/Scroll">
            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_playlist_music"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/main_empty_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/main_empty_description_label"
                    style="@style/HeroDescription" />

                <Button android:id="@+id/main_empty_hero_button"
                    android:text="@string/main_empty_refresh_button"
                    style="@style/HeroButton" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- Access page -->
    <LinearLayout android:id="@+id/main_access_page"
        android:visibility="gone"
        style="@style/Root">

        <LinearLayout style="@style/ActionBar">
            <TextView android:text="@string/app_name"
                style="@style/ActionBarTitle" />

            <ImageButton android:id="@+id/main_access_refresh_button"
                android:src="@drawable/ic_refresh"
                style="@style/ActionBarIconButton" />
        </LinearLayout>

        <ScrollView style="@style/Scroll">
            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_folder"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/main_access_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/main_access_description_label"
                    style="@style/HeroDescription" />

                <Button android:id="@+id/main_access_hero_button"
                    android:text="@string/main_access_refresh_button"
                    style="@style/HeroButton" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
